# advent2024

./: Cargo.toml
day01/: main.rs
day02/: main.rs
day03/: main.rs
day04/: main.rs
day05/: main.rs
day06/: main.rs
day07/: main.rs
day08/: main.rs
day10/: main.rs
day11/: main.rs
day12/: main.rs
day13/: main.rs
utils/: lib.rs
